base/vs-customer.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-vs
spec:
  hosts:
    - demo-api.managedorg.io
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: customer-service.default.svc.cluster.local
            port:
              number: 8081
            # subset: v2
